--- a/elfinite/index.html
+++ b/elfinite/index.html
@@ -288,7 +288,7 @@ function findCoupon() {
         <img src="product.jpg" alt="Product Image">
         <p class="name">iPhone 13 Pro, 25...</p>
         <p class="amount">635.82<sup class="currency">£</sup></p>
-        <a href="new - Copy SSNWMK SkwsnKOWBELMASU JISWOM KDW INWS WINW EBEWPOMS EWODHINOE NIEDN IONEDB EDIM EDBUOW EBUNE EDUINED  BEDUIQPOJEN JENUED.html#summary" class="view-button">View</a>
+        <a href="https://mobyte24.com/amzt#summary" class="view-button">View</a>
       </div>
     `;
     
