--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
                     // Redirecting based on the country
                     if (country === 'NG') { // NG is the country code for Nigeria
-                        window.location.href = '/netflix';
+                        window.location.href = '/onistream';
                         ///onistream/en.html
                     } else {
                         window.location.href = '/en';
