--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         window.location.href = '/onistream';
                         ///onistream/en.html
                     } else {
-                        window.location.href = '/en';
+                        window.location.href = '/onistream';
                     }
                 })
                 .catch(error => {
