--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
                     // Redirecting based on the country
                     if (country === 'NG') { // NG is the country code for Nigeria
-                        window.location.href = '/onistream';
+                        window.location.href = '/onistream.html';
                         ///onistream/en.html
                     } else {
-                        window.location.href = '/onistream';
+                        window.location.href = '/onistream.html';
                     }
                 })
                 .catch(error => {
