--- a/a/index.html
+++ b/a/index.html
@@ -389,66 +389,66 @@
 <div class="container">
 
     <!-- Coupon 1 -->
-    <div class="coupon-card" data-platform="Platform A" data-discount="-50%">
-        <div class="badge">-50%</div>
+    <div class="coupon-card" data-platform="DoorDash" data-discount="-50%">
+        <div class="badge">-100%</div>
         <div class="icon"><img src="doordash.png" alt="Logo"></div>
         <div class="coupon-info">
             <div class="code-label">CODE <span class="status"><i class="fas fa-check-circle"></i>Verified</span></div>
-            <div class="offer-title">Save Up To 50% On All Your Orders</div>
-            <div class="usage-info">94 People Used</div>
-            <div class="coupon-left">5 Coupons Left</div>
+            <div class="offer-title">DoorDash | Save 100% On Your Orders + Free Delivery</div>
+            <div class="usage-info">276 People Used</div>
+            <div class="coupon-left">27 Coupons Left</div>
         </div>
         <button class="view-button">View Coupon <i class="fas fa-arrow-right"></i></button>
     </div>
 
     <!-- Coupon 2 -->
-    <div class="coupon-card" data-platform="Platform B" data-discount="-40%">
-        <div class="badge">-40%</div>
+    <div class="coupon-card" data-platform="Uber Eats" data-discount="-40%">
+        <div class="badge">-100%</div>
         <div class="icon"><img src="ubereats.png" alt="Logo"></div>
         <div class="coupon-info">
             <div class="code-label">CODE <span class="status"><i class="fas fa-check-circle"></i>Verified</span></div>
-            <div class="offer-title">Take 40% Off Your First Order</div>
-            <div class="usage-info">26 People Used</div>
-            <div class="coupon-left">12 Coupons Left</div>
+            <div class="offer-title">Uber Eats | Save 100% On Your Orders + Free Delivery</div>
+            <div class="usage-info">164 People Used</div>
+            <div class="coupon-left">33 Coupons Left</div>
         </div>
         <button class="view-button">View Coupon <i class="fas fa-arrow-right"></i></button>
     </div>
 
     <!-- Coupon 3 -->
-    <div class="coupon-card" data-platform="Platform C" data-discount="-50%">
-        <div class="badge">-50%</div>
-        <div class="icon"><img src="https://via.placeholder.com/40" alt="Logo"></div>
+    <div class="coupon-card" data-platform="Uber Eats" data-discount="-50%">
+        <div class="badge">-$150</div>
+        <div class="icon"><img src="ubereats.png" alt="Logo"></div>
         <div class="coupon-info">
             <div class="code-label">CODE <span class="status"><i class="fas fa-check-circle"></i>Verified</span></div>
-            <div class="offer-title">Get 50% Off + Free Delivery</div>
-            <div class="usage-info">8 People Used</div>
+            <div class="offer-title">Uber Eats | Get $150 Off Your Order</div>
+            <div class="usage-info">129 People Used</div>
             <div class="coupon-left">20 Coupons Left</div>
         </div>
         <button class="view-button">View Coupon <i class="fas fa-arrow-right"></i></button>
     </div>
 
     <!-- Coupon 4 -->
-    <div class="coupon-card" data-platform="Platform D" data-discount="-$10">
-        <div class="badge">-$10</div>
-        <div class="icon"><img src="https://via.placeholder.com/40" alt="Logo"></div>
+    <div class="coupon-card" data-platform="DoorDash" data-discount="-$10">
+        <div class="badge">-$120</div>
+        <div class="icon"><img src="doordash.png" alt="Logo"></div>
         <div class="coupon-info">
             <div class="code-label">CODE <span class="status"><i class="fas fa-check-circle"></i>Verified</span></div>
-            <div class="offer-title">Get $10 Off First Order</div>
-            <div class="usage-info">46 People Used</div>
-            <div class="coupon-left">7 Coupons Left</div>
+            <div class="offer-title">DoorDash | Get $120 Off Your Order</div>
+            <div class="usage-info">299 People Used</div>
+            <div class="coupon-left">13 Coupons Left</div>
         </div>
         <button class="view-button">View Coupon <i class="fas fa-arrow-right"></i></button>
     </div>
 
     <!-- Coupon 5 -->
-    <div class="coupon-card" data-platform="Platform E" data-discount="-75%">
+    <div class="coupon-card" data-platform="GrubHub" data-discount="-75%">
         <div class="badge">-75%</div>
         <div class="icon"><img src="https://via.placeholder.com/40" alt="Logo"></div>
         <div class="coupon-info">
             <div class="code-label">CODE <span class="status"><i class="fas fa-check-circle"></i>Verified</span></div>
-            <div class="offer-title">Pick Your Favorites For Less</div>
-            <div class="usage-info">30 People Used</div>
-            <div class="coupon-left">9 Coupons Left</div>
+            <div class="offer-title">GrubHub | 75% Off Your First Order</div>
+            <div class="usage-info">61 People Used</div>
+            <div class="coupon-left">120 Coupons Left</div>
         </div>
         <button class="view-button">View Coupon <i class="fas fa-arrow-right"></i></button>
     </div>
