--- a/a/index.html
+++ b/a/index.html
@@ -389,7 +389,7 @@
 <div class="container">
 
     <!-- Coupon 1 -->
-    <div class="coupon-card" data-platform="DoorDash" data-discount="-50%">
+    <div class="coupon-card" data-platform="DoorDash" data-discount="-100%">
         <div class="badge">-100%</div>
         <div class="icon"><img src="doordash.png" alt="Logo"></div>
         <div class="coupon-info">
@@ -402,7 +402,7 @@
     </div>
 
     <!-- Coupon 2 -->
-    <div class="coupon-card" data-platform="Uber Eats" data-discount="-40%">
+    <div class="coupon-card" data-platform="Uber Eats" data-discount="-100%">
         <div class="badge">-100%</div>
         <div class="icon"><img src="ubereats.png" alt="Logo"></div>
         <div class="coupon-info">
@@ -415,7 +415,7 @@
     </div>
 
     <!-- Coupon 3 -->
-    <div class="coupon-card" data-platform="Uber Eats" data-discount="-50%">
+    <div class="coupon-card" data-platform="Uber Eats" data-discount="-$150">
         <div class="badge">-$150</div>
         <div class="icon"><img src="ubereats.png" alt="Logo"></div>
         <div class="coupon-info">
@@ -428,7 +428,7 @@
     </div>
 
     <!-- Coupon 4 -->
-    <div class="coupon-card" data-platform="DoorDash" data-discount="-$10">
+    <div class="coupon-card" data-platform="DoorDash" data-discount="-$120">
         <div class="badge">-$120</div>
         <div class="icon"><img src="doordash.png" alt="Logo"></div>
         <div class="coupon-info">
