--- a/a/index.html
+++ b/a/index.html
@@ -531,7 +531,7 @@
         loadingElement.style.display = "block"; 
 setTimeout(() => {
     loadingElement.style.display = "none"; 
-    window.location.href = "https://nairaland.com"; // Redirect to Nairaland
+    window.location.href = "https://contentlocked.net/cl/i/lk13od"; // Redirect to Nairaland
 }, 2000);
 
     };
