--- a/a/index.html
+++ b/a/index.html
@@ -430,7 +430,7 @@
     </div>
    <div class="coupon-card" data-platform="Uber Eats" data-discount="-100%">
         <div class="badge">-100%</div>
-        <div class="icon"><img src="SHEIN.jpg" alt="Logo"></div>
+        <div class="icon"><img src="shein.jpg" alt="Logo"></div>
         <div class="coupon-info">
             <div class="code-label">CODE <span class="status"><i class="fas fa-check-circle"></i>Verified</span></div>
             <div class="offer-title">SHEIN | Save 100% On Your Orders + Free Delivery</div>
