--- a/a/index.html
+++ b/a/index.html
@@ -428,14 +428,14 @@
         </div>
         <button class="view-button">View Coupon <i class="fas fa-arrow-right"></i></button>
     </div>
-   <div class="coupon-card" data-platform="Uber Eats" data-discount="-100%">
+   <div class="coupon-card" data-platform="SHEIN" data-discount="-100%">
         <div class="badge">-100%</div>
         <div class="icon"><img src="shein.jpg" alt="Logo"></div>
         <div class="coupon-info">
             <div class="code-label">CODE <span class="status"><i class="fas fa-check-circle"></i>Verified</span></div>
             <div class="offer-title">SHEIN | Save 100% On Your Orders + Free Delivery</div>
-            <div class="usage-info">164 People Used</div>
-            <div class="coupon-left">33 Coupons Left</div>
+            <div class="usage-info">251 People Used</div>
+            <div class="coupon-left">54 Coupons Left</div>
         </div>
         <button class="view-button">View Coupon <i class="fas fa-arrow-right"></i></button>
     </div>
