--- a/i.html
+++ b/i.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <div id="hello-text">Marley 💗</div>
+    <div id="hello-text">Paityn 🌀</div>
     <button onclick="copyToClipboard()">Copy Text</button>
 
     <script>
