--- a/i.html
+++ b/i.html
@@ -26,7 +26,23 @@
     </style>
 </head>
 <body>
-    <div id="hello-text">Caitlin 🤍</div>
+    <div id="hello-text">
+Avah 💕
+Gabriella 🤍
+Noemi 🧡
+Marianna 🧡
+Haley 🧡
+Yoselin 💕
+Marley 💗
+Paityn 🌀
+Gabriela ♥️
+Margaret ♥️
+Madelyn ♥️
+Jaylene 🧡
+Katelynn 🌀
+Cindy 💗
+Cindy 💗
+</div>
     <button onclick="copyToClipboard()">Copy Text</button>
 
     <script>
