--- a/i.html
+++ b/i.html
@@ -27,21 +27,15 @@
 </head>
 <body>
     <div id="hello-text">
-Avah 💕
-Gabriella 🤍
-Noemi 🧡
-Marianna 🧡
-Haley 🧡
-Yoselin 💕
-Marley 💗
-Paityn 🌀
-Gabriela ♥️
-Margaret ♥️
-Madelyn ♥️
-Jaylene 🧡
-Katelynn 🌀
-Cindy 💗
-Cindy 💗
+Evangeline 🧡
+Makayla 🧡
+Sienna 🤍
+Victoria 🐼
+Rebecca 🤍
+Samara ♥️
+Jane 🧡
+Gabrielle 💕
+Barbara 🧡
 </div>
     <button onclick="copyToClipboard()">Copy Text</button>
 
